fix: 허용되는 HTTP methods 와일드카드 대신 개별 작성